shift issue solved

--- a/src/GameComponents/style/style.css
+++ b/src/GameComponents/style/style.css
@@ -1,10 +1,15 @@
 .tile {
   background-color: white;
   border: none;
+  display: block;
+
   font-size: 6em;
   width: 100px;
   height: 100px;
   font-family: Arial, Helvetica, sans-serif;
+  line-height: 0.75em;
+  border-radius: 5px;
+  overflow: visible;
 }
 
 .player-O {
@@ -19,12 +24,15 @@
   color: #ffb61b;
 }
 
-td,
-tr {
+td {
   padding: 4px;
   margin: 0;
 }
 
+table {
+  border-spacing: 0;
+  border-collapse: collapse;
+}
 .home {
   display: flex;
   height: 80vh;
